# chatgpt-wrapper-163

./: .gitignore  README.md  private.pem  public.pem
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
