[package]
name = "chatgpt-wrapper"
version = "0.1.0"
description = "A Tauri desktop wrapper for ChatGPT"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "updater", "system-tray", "shell-open", "window-minimize", "window-unminimize", "window-maximize", "window-unmaximize", "window-hide", "window-show", "window-close", "window-start-dragging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
